# clipper

./: .gitignore  Cargo.toml  README.md
.github/codex/prompts/: issue_fix.md
.github/workflows/: codex-issue-to-pr.yml
docs/: REPO_STRUCTURE.md
docs/design/: command-export.md
src/: main.rs
