[package]
name = "clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
